General nowrap css rule; Fix Imported Nitrogen card markup

--- a/src/styles/common.less
+++ b/src/styles/common.less
@@ -83,6 +83,10 @@ input[type="radio"]:checked + label {
     cursor: pointer;
 }
 
+.nowrap {
+    white-space: nowrap;
+}
+
 @import "./language_switcher.less";
 @import "./cards.less";
 @import "./language_hacks.less";
